# RAG_Project

./: .gitignore  README.md
backend/: pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  eval.py  knowledge.py
backend/app/core/: auth.py  captcha.py  config.py  database.py  logging_config.py
backend/app/models/: conversation.py  faq.py  faq_stats.py  knowledge_base.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: bm25_store.py  deep_parser.py  document_parser.py  evaluator.py  faq_service.py  faq_stats_service.py  hybrid_retrieval.py  image_rag_qa.py  intent_recognizer.py  llm_service.py  markdown_image_processor.py  minio_store.py  qa_stopwords.py  query_rewriter.py  rag_service.py  ragas_evaluator.py  reranker.py  retrieval_strategies.py  sparse_embedding.py  vector_store.py
backend/logs/: ragas_eval_report.json
backend/scripts/: eval_ragas.py
backend/tests/: test_auth.py
data/documents/: API网关设计模式.md  Docker 容器化部署实战.md  Docker容器化部署实战.md  Kubernetes 核心概念详解.md  MySQL 性能优化指南.md  MySQL性能优化指南.md  Nginx反向代理配置.md  Redis 缓存最佳实践.md  architecture.md  overview.md  service.md  分布式系统设计原则.md  微服务架构设计最佳实践.md
data/images/: cicd-pipeline.png.json  crawled_cf3895c7.png.json  docker-compose-arch.png.json  docker-compose-flow.png.json  jwt-auth-flow.png.json  k8s-architecture.png.json  k8s-cluster.png.json  (+15 more)
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json
scripts/: crawl_data.py
(+39 files in other folders)
